--- a/themes/blog/assets/scss/style.scss
+++ b/themes/blog/assets/scss/style.scss
@@ -24,22 +24,26 @@ h3,
 h4,
 h5,
 h6,
-dt{
+dt {
   font-family: $font-title;
-  font-weight: 600;
+  font-weight: 500;
 }
-p{
+
+p {
   margin-top: 0;
 }
+
 a {
   color: $color-primary;
   text-decoration: none;
+
   &:hover {
     color: $color-dark;
   }
 
   &.sub-color {
     color: $color-light;
+
     &:hover {
       color: $color-dark;
     }
@@ -51,14 +55,16 @@ dd {
 }
 
 ol,
-ul{
+ul {
   li {
     margin-bottom: 15px;
-    &:last-child{
+
+    &:last-child {
       margin-bottom: 0;
     }
+
     > ol,
-    ul{
+    ul {
       margin-top: 15px;
     }
   }
@@ -94,6 +100,7 @@ sup {
 .footnote-return {
   position: relative;
   top: -.5em;
+
   sup {
     top: 0;
   }
@@ -106,13 +113,16 @@ sup {
   background-color: $color-primary;
   border: none;
   border-radius: 4px;
+
   &:hover {
     opacity: .9;
   }
+
   &--outline {
     color: $color-primary;
     background-color: #fff;
     border: 1px solid $color-primary;
+
     &:hover {
       color: #fff;
     }
@@ -146,60 +156,72 @@ sup {
     flex-flow: row;
     padding: 2rem 0;
   }
+
   .left {
     text-align: center;
     @include breakpoint(tablet) {
       text-align: left;
     }
   }
+
   .site-title {
-    @include font-size(2);
+    @include font-size(1.6);
     margin: 10px 0;
-    line-height: 0;
+    line-height: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
     @include breakpoint(tablet) {
       margin: 0;
-      @include font-size(3);
     }
+
     a {
-      font-size: 0;
       color: $color-dark;
     }
-    .logo{
+
+    .logo {
       height: 25px;
     }
   }
+
   .site-desc {
     margin: 0;
     font-weight: $font-weight-normal;
   }
+
   .site-navigation {
-    ul{
+    ul {
       display: flex;
       align-items: center;
       justify-content: center;
       padding: 0;
       margin: 0;
       list-style: none;
-      li{
+
+      li {
         margin: 0;
       }
-      a{
+
+      a {
         display: block;
         font-size: .875rem;
       }
     }
-    &__item{
+
+    &__item {
       padding-left: 20px;
-      &:first-child{
+
+      &:first-child {
         padding-left: 0;
       }
     }
+
     .cta {
       padding: 5px 15px;
       font-weight: 600;
       color: $color-primary;
       border: 2px solid $color-primary;
       border-radius: 4px;
+
       &:hover {
         color: #fff;
         background-color: $color-primary;
@@ -208,40 +230,45 @@ sup {
   }
 }
 
-.site-content{
-  margin-top: 50px;
+.site-content {
+  margin-top: 30px;
 }
 
 /***** ARTICLE ITEM *****/
 .article {
   position: relative;
   margin: 0 0 .75rem;
+
   &:first-child {
     margin-top: 0;
   }
+
   &:last-child {
     border: none;
   }
+
   &__title {
     margin-top: 0;
     margin-bottom: .5rem;
-    font-size: 2rem;
+    font-size: 1.75rem;
     font-weight: 500;
-    line-height: 2.25rem;
+    line-height: 2rem;
     color: $color-primary;
-    @at-root .list &{
+    @at-root .list & {
       margin-bottom: 0;
       font-size: 1.25rem;
       line-height: 1.75rem;
     }
   }
+
   &__intro {
     color: $color-light;
   }
+
   &__meta {
     margin-bottom: 10px;
     color: $color-light;
-    @at-root .list &{
+    @at-root .list & {
       @include font-size(.9);
     }
     a {
@@ -250,10 +277,12 @@ sup {
       }
     }
   }
+
   &__content {
     margin-top: 30px;
     margin-bottom: 50px;
   }
+
   .guest-post {
     padding: .125rem .25rem;
     color: #852202;
@@ -264,16 +293,19 @@ sup {
 
 .article-format {
   iframe,
-  .runkit{
+  .runkit {
     margin-bottom: $article-element-gap;
   }
+
   p,
   dd {
     margin: 0 0 $article-element-gap;
+
     a {
       text-decoration: underline;
     }
   }
+
   ol,
   ul {
     li {
@@ -281,15 +313,19 @@ sup {
       margin-bottom: 10px;
     }
   }
+
   ol {
     padding-left: 30px;
     list-style: numeric;
   }
+
   ul {
     padding: 0 0 0 .875rem;
     list-style: none;
+
     li {
       padding-left: 15px;
+
       &::before {
         position: absolute;
         left: 0;
@@ -297,15 +333,19 @@ sup {
       }
     }
   }
+
   strong {
     font-weight: 600;
   }
+
   em {
     font-style: italic;
   }
+
   code {
     font-family: $font-mono;
   }
+
   pre {
     display: inline-block;
     min-width: 100%;
@@ -314,47 +354,57 @@ sup {
     overflow-x: auto;
     clear: both;
     font-size: 15px;
-    background-color: #faf8f588 !important /* stylelint-disable-line declaration-no-important */;
+    background-color: #faf8f588 !important /* stylelint-disable-line declaration-no-important */
+  ;
     border: 1px solid #dfe2e588;
     border-radius: 8px;
   }
+
   code:not(.hljs) {
     font-size: 1rem;
     background-color: #faf8f588;
     border: 1px solid #dfe2e588;
     border-radius: .25rem;
   }
+
   li code,
   p code {
     padding: 0 4px;
   }
+
   a {
     font-weight: 500;
     color: $color-primary;
+
     &:hover {
       color: #fff;
       background-color: $color-primary;
     }
   }
+
   h1,
   h2,
   h3,
   dt {
     margin-top: 0;
+
     &::before {
       margin-right: 5px;
       font-weight: 400;
       color: $color-light;
     }
   }
+
   h2,
-  dt{
+  dt {
     margin-bottom: 18px;
     @include font-size(1.4);
   }
-  h3{
+
+  h3 {
     @include font-size(1.3);
   }
+
   img {
     display: block;
     max-width: 100%;
@@ -363,6 +413,7 @@ sup {
     margin-bottom: 1rem;
     margin-left: auto;
   }
+
   blockquote {
     padding-left: 1rem;
     margin-right: 0;
@@ -372,17 +423,21 @@ sup {
     color: rgba($color-dark, .75);
     border-left: 2px solid rgba($color-dark, .2);
   }
+
   figure {
     padding: 0;
     margin: 1rem 0;
     text-align: center;
+
     a {
       font-size: 0;
+
       &::after {
         display: none;
       }
     }
   }
+
   .filename {
     position: relative;
     padding: .5rem 1rem;
@@ -405,39 +460,47 @@ sup {
   text-align: center;
   border-top: 1px solid lighten($color-light, 70);
   @include font-size(.9);
+
   p {
     margin: 0;
   }
+
   &__nav {
     a {
       padding: 17px;
     }
   }
-  a::after{
+
+  a::after {
     display: none;
   }
-  .license-url{
+
+  .license-url {
     line-height: 0;
   }
 }
 
 
 /***** PAGINATION *****/
-.pagination{
+.pagination {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0;
   margin: 60px 0 0;
   list-style: none;
-  .page-item{
+
+  .page-item {
     margin: 0;
-    a{
+
+    a {
       padding: 10px;
     }
-    &.active{
+
+    &.active {
       border: 2px solid $color-primary;
       border-radius: 4px;
+
       a {
         font-weight: 600;
         color: $color-primary;
@@ -446,8 +509,8 @@ sup {
   }
 }
 
-figcaption{
-  h4{
+figcaption {
+  h4 {
     margin: 0;
     font-weight: 400;
     text-align: center;
@@ -455,9 +518,10 @@ figcaption{
   }
 }
 
-.gitinfo{
+.gitinfo {
   @include font-size(.9);
-  &__contributor{
+
+  &__contributor {
     display: inline-block;
     padding: 0 5px;
     margin-left: 5px;
@@ -465,36 +529,43 @@ figcaption{
     text-decoration: none;
     background: #f3f3f3;
     border-radius: 4px;
-    &[open]{
+
+    &[open] {
       display: block;
       padding: 10px;
       margin: 20px 0;
-      summary{
+
+      summary {
         margin-bottom: 5px;
       }
     }
-    summary{
+
+    summary {
       font-weight: 600;
       cursor: pointer;
       outline: none;
     }
-    ul{
+
+    ul {
       padding-left: 15px;
       margin: 0;
       list-style: none;
-      li{
+
+      li {
         margin-bottom: 5px;
       }
     }
-    time{
+
+    time {
       font-weight: 600;
     }
   }
 }
 
-.single-section{
+.single-section {
   margin-bottom: 50px;
-  &__title{
+
+  &__title {
     @include font-size(1.3);
     margin-top: 0;
   }
@@ -504,20 +575,24 @@ figcaption{
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+
   h1 {
     margin-bottom: 0;
   }
+
   ul {
     display: flex;
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
     list-style: none;
+
     li {
       margin: .5rem;
     }
   }
-  .tag{
+
+  .tag {
     padding: 5px;
     color: $color-primary;
     text-decoration: none;
@@ -528,15 +603,17 @@ figcaption{
   }
 }
 
-.related-section{
-  ul{
+.related-section {
+  ul {
     padding-left: 0;
     list-style: none;
-    li{
+
+    li {
       position: relative;
       padding-left: 25px;
     }
-    li::before{
+
+    li::before {
       position: absolute;
       left: 5px;
       display: inline-block;
@@ -545,10 +622,11 @@ figcaption{
   }
 }
 
-.footnotes{
+.footnotes {
   margin-top: 50px;
   margin-bottom: 50px;
-  hr{
+
+  hr {
     opacity: .3;
   }
 }
@@ -558,12 +636,14 @@ figcaption{
   border-collapse: collapse;
   border: solid 1px #acd8ee;
 }
+
 .styled-table th {
   padding: 10px;
   text-align: left;
   background-color: #ddefef;
   border: solid 1px #fff;
 }
+
 .styled-table tbody td {
   padding: 10px;
   border: solid 1px #dee;
@@ -581,7 +661,7 @@ figcaption{
 }
 
 .save-section,
-.fb-save{
+.fb-save {
   margin-right: 5px;
   line-height: 0;
 }
@@ -592,9 +672,10 @@ figcaption{
 }
 
 #search-box {
-  .ais-search-box label{
+  .ais-search-box label {
     display: block;
   }
+
   .ais-search-box,
   input {
     width: 100%;
@@ -602,13 +683,16 @@ figcaption{
     border-color: rgba($color-dark, .2);
     border-width: 2px;
     box-shadow: none;
+
     &:focus {
       border-color: $color-primary;
     }
+
     &:focus + span > div > svg {
       fill: $color-primary;
     }
   }
+
   svg {
     fill: rgba($color-dark, .2);
   }
@@ -623,24 +707,29 @@ figcaption{
   background-color: #fff;
   border-radius: 4px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
+
   .search-result-item {
     display: block;
     padding: .5rem 1rem;
     font-size: 1rem;
     border-bottom: 1px solid rgba($color-light, .1);
+
     &:hover {
       background-color: rgba($color-primary, .1);
     }
+
     .title {
       margin: 0;
       font-size: 1rem;
       font-weight: 400;
       color: $color-dark;
+
       em {
         font-style: normal;
         background-color: rgba($color-primary, .3);
       }
     }
+
     .meta {
       font-size: .875rem;
       color: $color-light;
@@ -650,36 +739,41 @@ figcaption{
       }
     }
   }
+
   .na {
     display: block;
     padding: 1rem;
   }
 }
 
-.offline{
-  & &--hide{
+.offline {
+  & &--hide {
     display: none;
   }
-  & &--display__block{
+
+  & &--display__block {
     display: block;
   }
 }
 
-.scrimba{
+.scrimba {
   margin-bottom: $article-element-gap;
   color: $color-primary;
   background-color: #e7ecf3;
   border-radius: 4px;
-  a{
+
+  a {
     position: relative;
     display: block;
     padding: 20px 20px 20px 67px;
     color: $color-primary;
-    &:hover{
+
+    &:hover {
       color: #3d547a;
       background: transparent;
     }
-    &::before{
+
+    &::before {
       position: absolute;
       top: 18px;
       left: 22px;
@@ -690,7 +784,8 @@ figcaption{
       background-color: #73abfe;
       border-radius: 50%;
     }
-    &::after{
+
+    &::after {
       position: absolute;
       top: 28px;
       left: 34px;
@@ -710,6 +805,6 @@ figcaption{
   display: none;
 }
 
-.highlight{
+.highlight {
   margin: 0 0 1.5rem;
 }
