--- a/themes/blog/assets/scss/_mixins.scss
+++ b/themes/blog/assets/scss/_mixins.scss
@@ -19,3 +19,14 @@ $break-desktop: 1280px;
     @media (min-width: $break-desktop) { @content; }
   }
 }
+
+@mixin container {
+   max-width: $content-width;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin: 0 auto;
+  @include breakpoint(tablet) {
+    padding-right: 25px;
+    padding-left: 25px;
+  }
+}
