--- a/themes/blog/assets/scss/_variables.scss
+++ b/themes/blog/assets/scss/_variables.scss
@@ -10,8 +10,10 @@ $content-width: 700px;
 $color-primary: #495057;
 $color-secondary: "";
 $color-dark: #495057;
+$color-black: #242424;
 $color-gray: #ccc;
 $color-light: rgba($color-dark, .7);
+$color-white: #fff;
 $color-success: #56bd77;
 
 %color-warning {
