--- a/themes/blog/layouts/articles/summary.html
+++ b/themes/blog/layouts/articles/summary.html
@@ -1,4 +1,5 @@
 <header>
+  <h1 class="article__title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
   <div class="article__meta">
       <time class="article__date">{{ .Date.Format "02-01-2006" }}</time>
       {{ range $.Param "authors" }}
